app/styles/main.css
html { height: 100% }

.no-width {
  width: 0px !important;
}

.btn:focus {
  outline: none;
}

.course-close-btn {
  border-top-left-radius: 0px;
  border-bottom-left-radius: 0px;
  margin-right: 25px;
}

.sidebar {
  padding-top:30px;
  text-align:center;
}

.scrollable-menu {
  height:auto;
  max-height: 400px;
  overflow-y: scroll;
  overflow-x: hidden;
}

.course-item {
  word-wrap: break-word; 
  white-space: normal !important;
}

li.disabled > .course-item {
  cursor: default !important;
}

.course-btn {
  border-bottom-right-radius: 0px;
  border-top-right-radius: 0px;  
}

.course-btn-group {
  padding-top:8px;
}

.navbar {
  z-index: 3;
}

.course-btns {
  padding-top: 10px;
}

.course-picker {
  position:fixed;
  width:100%;
  z-index:1; 
  margin:0px;
  min-height:0;
  top: -10px;
  width: inherit;

  background-color: #f5f5f5 !important;
  border: 1px solid #e3e3e3 !important;
  border-radius: 0px !important;
  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05) !important;
  box-shadow: inset 0 1px 1px rgba(0,0,0,.05) !important;
}

.class-search {
  padding: 7px 7px 10px 7px;
  width: 200px;
}

.course-picker-show-animation { 
  -webkit-animation: myfirst 0.5s 1s forwards; /* Chrome, Safari, Opera */
  animation: myfirst 0.5s 1s forwards;
}

@-webkit-keyframes myfirst
{
  from {
    top:-10px;
  }
  to {  
    top: 50px;
  }
}

.hide {
  position: absolute; 
  overflow: hidden; 
  clip: rect(0 0 0 0); 
  height: 1px; width: 1px; 
  margin: -1px; padding: 0; border: 0; 
}

.no-height {
  height: 0px !important;
}

.fill {
  height: 100%; 
}

.fill-width {
  width: 100%;
}

.navbar {
  background-color: white;
}

.map-jumbo {
  padding-left:0px;
  padding-right:0px;
  padding-bottom:0px;
  margin: 0;
}

body {
  height: 100%;
  margin: 0; 
  /*padding-top:50px;*/
}

.google-map {
  -webkit-transition:all linear 0.5s;
  -moz-transition:all linear 0.5s;
  -o-transition:all linear 0.5s;
  transition:all linear 0.5s;  
  height: 100%;
  margin: 0px;
  padding: 0px;
  float:right;
}

.transition {
  -webkit-transition:all linear 0.5s;
  -moz-transition:all linear 0.5s;
  -o-transition:all linear 0.5s;
  transition:all linear 0.5s;  
}

.float-left {
  float:left;
}

.blur {
  /*filter: blur(10px);*/
}

.signup-wrapper {
  text-align: center;
  position:absolute;
  display: table;
  width: 100%;
  height: 100%;
  z-index:2;
  background-color: rgba(100,100,100,0.7);
}

.signup-wrapper-inner {
  display: table-cell;
  vertical-align: top;
}

.cover-container {
  margin-right: auto;
  margin-left: auto;
}

/* Padding for spacing */
.inner {
  padding: 30px;
}

/*
 * Cover
 */

.cover {
  padding: 0 20px;
}

#signup_content {
  display: none;
}

.home-dialog {
  background-color: #EFEFEF;
}

.university-picker {
  margin-bottom: 24px;
}

/*
 * Affix and center
 */

@media (min-width: 768px) {
  /* Start the vertical centering */
  .signup-wrapper-inner {
    vertical-align: middle;
    /*padding-bottom:50px;*/
  }
  /* Handle the widths */
  .cover-container {
    width: 100%; /* Must be percentage or pixels for horizontal alignment */
  }
}

@media (min-width: 992px) {
  .cover-container {
    width: 700px;
  }
}

#footer {
  position: absolute;
  bottom: 0px;
  width: 100%;
  height: 60px;
  background-color: white;
  z-index: 3;
}

.container .text-muted {
  margin: 20px 0;
}

.fade-transition.ng-hide-add, .fade-transition.ng-hide-remove {
  -webkit-transition:all linear 0.5s;
  -moz-transition:all linear 0.5s;
  -o-transition:all linear 0.5s;
  transition:all linear 0.5s;
  display:table!important;
}

.fade-transition.ng-hide-add.ng-hide-add-active,
.fade-transition.ng-hide-remove {
  opacity:0;
}

.fade-transition.ng-hide-add,
.fade-transition.ng-hide-remove.ng-hide-remove-active {
  opacity:1;
}

/*Dashboard Styles*/

.nav-padding {
  padding: 0px 100px 0px 80px;
}

.main-screen-container {
  padding-top:50px;
}

/* Modal Styles */
.nav-tabs li > a {
  user-select: none;  
  cursor:default !important;
}

.container-modal {
  padding: 10px 10px 10px 10px;
  border-left: 1px solid #dddddd;
  border-right: 1px solid #dddddd;
  border-bottom: 1px solid #dddddd;    
}

.modal-footer {
  margin-top: 0px !important;
}

.room-picker {
  text-align: center;
}

.modal-headsup {
  padding-top:23px;
}

.modal-map {
  height: 200px;
}

.media-body {
  text-align: left;
}

/*Session Styles*/
.session-description h6 {
  margin:0px;
}

.session-description {
  margin-top: 8px;
}

.session-description-container {
  margin-top: 5px;
}

.media-object {
  height: 25px;
}

.session-entry {
  margin:5px;
  list-style-type: none;
  cursor: pointer;
  padding: 10px;
  user-select: none;
}

.session-entry:hover {
  background-color: #eeeeee;
}

